fix sponsor image centering on mobile, i think

--- a/_sass/minimal-mistakes/skins/_smll.scss
+++ b/_sass/minimal-mistakes/skins/_smll.scss
@@ -225,9 +225,9 @@ div.gallery {
 }
 
 .gallery figure {
-	align-content: space-around;
-	align-items: center;
-	justify-self: center;
+    align-content: space-around;
+    align-items: center;
+    justify-content: space-around;
 }
 
 
